--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <div>Size field:<input id="sizeField" type="number"></div>
         </div>
     </footer>
-    
-    <script src="index.js"></script>
+    <script type="module" src="./helpers/bombPlanting.js"></script>
+    <script type="module" src="./helpers/renderField.js"></script>
+    <script type="module" src="./game.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
