commit with errors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         </div>
         <div>Bomb: <span id="bombAmount"></span></div>
-        <button class="header__button">refresh</button>
+        <button id="header__button">refresh</button>
         <div>Time: <span id="timer"></span></div>
     </header>
     <h1>Sapper</h1>
